--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                 <span class="card-title activator teal-text hoverline">MyMeme<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  A social game based in Go
+                  A social game based in Unity and Go
                 </p>
               </div>
               <div class="card-reveal">
