--- a/index.html
+++ b/index.html
@@ -671,7 +671,8 @@
 
                 </ul>
                 <!-- TODO: upload things -->
-
+                <div class="card-action">
+                </div>
               </div>
             </div>
           </div>
