--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                 <img alt="music streaming app" src="/assets/img/selfie1.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">MyMeme<i
+                <span class="card-title activator teal-text hoverline">Meme Game<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A social game based in Unity and Go
@@ -594,12 +594,7 @@
                 <ul>
                   <li><b>Tools:</b> Go, Unity, C#, Docker</li>
                 </ul>
-                <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for project" href="https://github.com/camillewalters/MyMeme"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
+                
               </div>
             </div>
           </div>
@@ -630,6 +625,13 @@
                   <li>Host Member Learning sessions to teach members about engineering-related topics surrounding equality in Canada</li>
 
                 </ul>
+                <div class="card-action">
+                 <a aria-label="Visit " href="https://uwaterlooewb.wixsite.com/podcast" target="_blank" data-position="top"
+                   data-tooltip="View Online"
+                   class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                     class="fa fa-external-link"></i></a>
+
+               </div>
               </div>
             </div>
           </div>
@@ -689,7 +691,7 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li>Talk to prospective and incoming first-years at open-house events at the University of Waterloo</li>
-                  <li>Hosted prospective students in classes to provide an immersive experience </li>
+                  <li>Host prospective students in classes to provide an immersive experience </li>
                   <li>Mentor first-year engineering students in areas such as academic success, course planning, mental health and student life</li>
 
 
@@ -785,7 +787,7 @@
                 </ul>
                 <!-- TODO: upload things -->
                 <div class="card-action">
-                  
+
                 </div>
               </div>
             </div>
@@ -849,7 +851,7 @@
               class="hoverline">chwalter@uwaterloo.ca</a></a>
         </p>
         <p>
-          <a aria-label="View Camille on GitHub" href="http://github.com/camillewalters" target="_blank"
+          <a aria-label="View me on GitHub" href="http://github.com/camillewalters" target="_blank"
             data-position="top" data-tooltip="Check out my Github"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
               aria-label="Check out my Github" href="http://github.com/camillewalters" class="hoverline"
