--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> -->
+camille.h.walters@gmail.com<!-- <!DOCTYPE html> -->
 <html lang="en">
 
 <head>
@@ -845,10 +845,10 @@
       <div class="container">
 
         <p>
-          <a aria-label="Email me!" href="mailto:chwalter@uwaterloo.ca" target="_blank" data-position="top"
+          <a aria-label="Email me!" href="mailto:camille.h.walters@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email me" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email me" href="mailto:chwalter@uwaterloo.ca"
-              class="hoverline">chwalter@uwaterloo.ca</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email me" href="mailto:camille.h.walters@gmail.com"
+              class="hoverline">camille.h.walters@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View me on GitHub" href="http://github.com/camillewalters" target="_blank"
