Add google tags

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <h1 id="hi-im-camille">hi! i&rsquo;m camille</h1>
 <p>Thanks for visiting my website. I&rsquo;m a Software Engineer at Unity, currently based out of Montreal. I graduated from the University of Waterloo in 2022 with a BASc in Honors Mechatronics Engineering.</p>
 <p>My professional interests currently lie at the intersection of game development, 3D visualization and modeling, and mechatronics.</p>
-<p>In my free time I like cooking, baking, swimming, bouldering and doing yoga.</p>
+<p>In my free time I like cooking, baking, swimming, bouldering and scuba diving.</p>
 
 
 
