Add pushover, take off irrelevant stuff

--- a/resume/index.html
+++ b/resume/index.html
@@ -86,7 +86,7 @@
 
 <h2 id="education">education</h2>
 <ul>
-<li>Bachelor of Applied Science in Honors Mechatronics Engineering with Co-op from the University of Waterloo, Waterloo, ON. (April 2022)</li>
+<li>Bachelor of Applied Science in Honors Mechatronics Engineering with Co-op from the University of Waterloo, Waterloo, ON. (Class of 2022)</li>
 </ul>
 <h2 id="skills">skills</h2>
 <p><strong>the languages i&rsquo;ve worked with (from most experience to least experience) are</strong></p>
@@ -146,6 +146,6 @@
 
 
 <small>
-  Copyright &copy; 2022 Camille Walters
+  Copyright &copy; 2023 Camille Walters
 </small>
 
