--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
 
 <h1 id="hi-im-camille">hi! i&rsquo;m camille</h1>
-<p>Thanks for visiting my website. I&rsquo;m a Software Engineer at Unity, currently based out of Montreal. I graduated from the University of Waterloo in 2022 with a BASc in Honors Mechatronics Engineering.</p>
-<p>My professional interests currently lie at the intersection of game development, 3D visualization and modeling, and mechatronics.</p>
-<p>In my free time I like cooking, baking, swimming, bouldering and scuba diving.</p>
+<p>Thanks for visiting my website. I&rsquo;m a Software Engineer, currently based out of Vancouver. I graduated from the University of Waterloo in 2022 with a BASc in Honors Mechatronics Engineering.</p>
+<p>My professional interests currently lie at the intersection of game development, 3D visualization, simulation, and mechatronics.</p>
+<p>In my free time I like cooking, baking, running, hiking and scuba diving.</p>
 
 
 
@@ -84,6 +84,6 @@
 </ul>
 
 <small>
-  Copyright &copy; 2023 Camille Walters
+  Copyright &copy; 2024 Camille Walters
 </small>
 
