Add link to Farming game

--- a/projects/index.html
+++ b/projects/index.html
@@ -81,7 +81,7 @@
 
 
 <p>If you want to see some of the code I&rsquo;ve written, check out my <a href="https://github.com/camillewalters">Github profile</a>.</p>
-<h2 id="farming-game">Farming Game</h2>
+<h2 id="farming-gamehttpsgithubcomcamillewaltersalienfarminggame"><a href="https://github.com/camillewalters/AlienFarmingGame">Farming Game</a></h2>
 <p>I&rsquo;m creating a tranquil and immersive 2D farming game set on a distant planet that combines my love for robotics and game development. I intend to leverage Unity&rsquo;s Muse to create a visually enchanting experience for players.</p>
 <h2 id="eggstravaganzahttpsgithubcomcamillewalterseggstravaganza-go-to-code"><a href="https://github.com/camillewalters/Eggstravaganza" title="Go to code">Eggstravaganza</a></h2>
 <p>This was a game developed with some of my coworkers at Unity. It is a multiplayer game where you play as a gopher and try to collect more eggs than your opponents. Developing this game really helped me learn about networking and how to create a positive user experience in multiplayer games.</p>
